# Envy_CLI

./: .env.example  .gitattributes  .gitignore  Envy.toml  README.md  README_ENV.md  cli.py  envy.schema.json  pyproject.toml
.github/workflows/: publish.yml
envy/: main.py
envy/core/: agentic_scan.py  docs.py  entropy.py  infer.py  schema.py  syncing.py
